Fix: Fix overflow-x still allowing horizontal scroll

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,12 @@
-body {
+html, body {
   margin: 0;
+  padding: 0;
+  position:relative;
   font-family: 'Roboto Condensed', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow-x: hidden;
+  max-width: 100%;
+  overflow-x: hidden !important;
   background-color:#fafafa;
 }
 
